Added more hardcoded requests